--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/RESERVATION?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=abc12345
+spring.datasource.password=root
 spring.jpa.show-sql=true
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
